Fixed alignment issues on Questions New page

--- a/stackoverflow/src/scss/partials/_questionsNew.scss
+++ b/stackoverflow/src/scss/partials/_questionsNew.scss
@@ -1,3 +1,8 @@
+h2.newQuestion{
+  text-align: center;
+  font-weight: bold;
+}
+
 .question-new {
   padding: 0px;
 }
@@ -5,4 +10,8 @@
 h3.QuestionAskBelow {
   margin-top: 80px;
   font-weight: bold;
+}
+
+div.form-group.col-md-2.question-new {
+  margin-left: 15px;
 }
